saving email template

--- a/public/HtmlTemplates/savethedate.html
+++ b/public/HtmlTemplates/savethedate.html
@@ -21,7 +21,7 @@
       }
 
       .bg-image {
-        background: url('https://images.unsplash.com/photo-1473448912268-2022ce9509d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1025&q=80') center / cover;
+        background: url('https://storage.googleapis.com/wedding-site-bucket/Edgewater-savethedate-bkg-blur.jpg') center / cover;
         width: 100%;
         height: 100%;
         position: absolute;
@@ -81,7 +81,7 @@
           HEADER, FOOTER, MAIN
       ------------------------------------- */
       .main {
-        background: #b5ccc2;
+        /* background: #b5ccc2; */
         border-radius: 3px;
         width: 100%; 
       }
@@ -375,29 +375,7 @@
                 <td class="wrapper" align="center">
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
-                      <td>
-                        <h1><span class='mate-sc'>SAVE</span> <span class='great-vibes'>THE</span> <span class='mate-sc'>DATE</span></h1>
-                        <p class="small-text mate-sc divider">For the wedding of</p>
-                        <hr style="border-width: 0; background: #000; color: #000; height:2px; padding: 0; margin: 5px;">
-                        <h2 class="small-text mate-sc">Dominic & Francesca</h2>
-                        <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
-                          <tbody>
-                            <tr>
-                              <td align="left">
-                                <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-                                  <tbody>
-                                    <tr>
-                                      <td> <a href="http://htmlemail.io" target="_blank">Call To Action</a> </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                        <p>This is a really simple email template. Its sole purpose is to get the recipient to click the button with no distractions.</p>
-                        <p>Good luck! Hope it works.</p>
-                      </td>
+                      <img src="https://storage.googleapis.com/wedding-site-bucket/text-1.png"/>
                     </tr>
                   </table>
                 </td>
