--- a/public/HtmlTemplates/savethedate.html
+++ b/public/HtmlTemplates/savethedate.html
@@ -21,11 +21,13 @@
       }
 
       .bg-image {
-        background: url('https://storage.googleapis.com/wedding-site-bucket/Edgewater-savethedate-bkg-blur.jpg') center / cover;
+        background: url('https://storage.googleapis.com/wedding-site-bucket/Edgewater-savethedate-bkg-blur-dark.jpg') center / cover;
         width: 100%;
         height: 100%;
         position: absolute;
         z-index: -1;
+        max-width: 1080px;
+        max-height: 800px;
       }
 
       body {
@@ -270,6 +272,10 @@
         border: 0;
         border-bottom: 1px solid #f6f6f6;
         margin: 20px 0; 
+      }
+
+      img {
+        vertical-align: middle;
       }
 
       /* -------------------------------------
