--- a/public/HtmlTemplates/savethedate.html
+++ b/public/HtmlTemplates/savethedate.html
@@ -22,15 +22,11 @@
 
       .bg-image {
         background: url('https://storage.googleapis.com/wedding-site-bucket/Edgewater-savethedate-bkg-blur-dark.jpg') center / cover;
-        width: 100%;
-        height: 100%;
-        position: absolute;
         z-index: -1;
-        max-width: 1080px;
-        max-height: 800px;
+        width: 100%
       }
 
-      body {
+      body, html {
         font-family: sans-serif;
         -webkit-font-smoothing: antialiased;
         font-size: 14px;
@@ -39,6 +35,8 @@
         padding: 0;
         -ms-text-size-adjust: 100%;
         -webkit-text-size-adjust: 100%; 
+        width: 800px;
+        height: 800px;
       }
 
       table {
@@ -369,32 +367,9 @@
     <span class="preheader">This is preheader text. Some clients will show this text as a preview.</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body bg-image" background="https://upload.wikimedia.org/wikipedia/commons/4/47/PNG_transparency_demonstration_1.png">
       <tr>
-        <td>&nbsp;</td>
         <td class="container" align="center">
-          <div class="content">
-
-            <!-- START CENTERED WHITE CONTAINER -->
-            <table role="presentation" class="main">
-
-              <!-- START MAIN CONTENT AREA -->
-              <tr>
-                <td class="wrapper" align="center">
-                  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-                    <tr>
-                      <img src="https://storage.googleapis.com/wedding-site-bucket/text-1.png"/>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
-
-            <!-- END MAIN CONTENT AREA -->
-            </table>
-            <!-- END CENTERED WHITE CONTAINER -->
-
-
-          </div>
+            <img src="https://storage.googleapis.com/wedding-site-bucket/text-1.png"/>
         </td>
-        <td>&nbsp;</td>
       </tr>
     </table>
   </body>
