--- a/public/HtmlTemplates/invite.html
+++ b/public/HtmlTemplates/invite.html
@@ -29,8 +29,10 @@
   </head>
   <body style="text-align: center; width: 100%;">
     <span class="preheader">Casey and Tom's Wedding Invitation</span>
-    <h1>Hooray! You are invited to Casey and Tom's Wedding on March 19th, 2022!</h1>
-    <img alt="You are invited to Casey and Tom's Wedding! Click the link below to RSVP." src="https://storage.googleapis.com/casey-wedding-site-bucket/invite.png"/>
+    <span>Dear replace-guest,<br/><br/></span>
+    <span>Hooray! You are invited to Casey and Tom's Wedding on March 19th, 2022! Please see the details below.</span>
+    <br/>
+    <img alt="You are invited to Casey and Tom's Wedding! Click the link below to RSVP." width="788" height="563" src="https://storage.googleapis.com/casey-wedding-site-bucket/invite.png"/>
     <a href="https://caseyandtomgetmarried.com/rsvp/replace-me"><h2>Click here to RSVP</h2></a>
   </body>
 </html>
