pulling in code + finalizing invite

--- a/public/HtmlTemplates/invite.html
+++ b/public/HtmlTemplates/invite.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Casey and Tom's Wedding Invitation</title>
+    <title>Dom and Frankie's Wedding Invitation</title>
     <style>
       /* -------------------------------------
           GLOBAL RESETS
@@ -30,7 +30,7 @@
   <body style="text-align: center; width: 100%;">
     <span class="preheader">Casey and Tom's Wedding Invitation</span>
     <span>Dear replace-guest,<br/><br/></span>
-    <span>Hooray! You are invited to Dominic and Frankie's Wedding on July 25th, 2022! Please see the details below.</span>
+    <span>Hooray! You are invited to Dominic and Frankie's Wedding on July 25th, 2022! Please see the details and the link to RSVP below.</span>
     <br/>
     <img alt="You are invited to Dominic and Frankie's Wedding! Click the link below to RSVP." width="800" height="1155" src="https://storage.googleapis.com/wedding-site-bucket/invite.jpeg"/>
     <a href="https://domandfrankie.wedding/rsvp/replace-me"><h2>Click here to RSVP</h2></a>
