fixed issue in invite

--- a/public/HtmlTemplates/invite.html
+++ b/public/HtmlTemplates/invite.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body style="text-align: center; width: 100%;">
-    <span class="preheader">Casey and Tom's Wedding Invitation</span>
+    <span class="preheader">Dom and Frankie's Wedding Invitation</span>
     <span>Dear replace-guest,<br/><br/></span>
     <span>Hooray! You are invited to Dominic and Frankie's Wedding on July 25th, 2022! Please see the details and the link to RSVP below.</span>
     <br/>
